Роли готовы давно, твоя прописана от и до. Мне нужен был враг вуаля, ты опреточный злодей, но в моем рукове побрей себе туз.

--- a/WebApplication2/WebApplication2.csproj
+++ b/WebApplication2/WebApplication2.csproj
@@ -25,6 +25,8 @@
 
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Pages\Account\Register.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Account\AcessDenied.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\Account\AcessDenied.cshtml" />
     </ItemGroup>
 
 </Project>
